# 2024.7

./: LICENSE  README.md
configs/: car-route.json  command-sequence.json  config.json
datasets/person/: person.yaml
docs/: 解决机载盒子ssh连接不上vscode的第二种方法.docx
src/: CalibrateCamera.py  Main.py  Test.py  Train.py  car-route.json  config.json
src/Controllers/: CarController.py  PlaneController.py  SystemController.py
src/Entities/: ArucoDetector.py  RoomManager.py  TargetDetector.py
src/Modules/: CarController.py  CarSeeker.py  ConfigHelper.py  ImageResolver.py  PlaneController.py  RadarResolver.py  ResultWriter.py  SystemController.py
src/Services/: CarControlService.py  PlaneCameraService.py
src/Utils/: JsonHelper.py  MathHelper.py
test/: test.py
video_decoding/: readme.txt
video_decoding/Decodertest/: CMakeLists.txt  main.cpp  readme.txt
video_decoding/ForFFmpeg4.2.7/include/: DjiRtspImageSource.h  TTARtspServer.h
video_decoding/raspicam_node/: CMakeLists.txt  package.xml  pipline.py
video_decoding/raspicam_node/launch/: uavdata.launch
video_decoding/raspicam_node/msg/: uavdata.msg
video_decoding/raspicam_node/src/: flightService.cpp  listener.cpp  publish.cpp  publish.h  service.cpp  service.h  serviceClient.cpp  service_test.cpp  takeoffLandingService.cpp  ttauav_node.cpp  uavData.cpp  uavData.h  uavpos_node.cpp
video_decoding/raspicam_node/src/proxy_src/: Buffer.cpp  Buffer.h  BufferItem.cpp  BufferItem.h  DataPort.cpp  DataPort.h  DataPortKeeperThread.cpp  DataPortKeeperThread.h  DataPortReadThread.cpp  DataPortReadThread.h  DataPortSendThread.cpp  DataPortSendThread.h  Lock.cpp  Lock.h  Log.cpp  Log.h  Port.cpp  Port.h  SerialDataPort.cpp  SerialDataPort.h  SerialPort.cpp  SerialPort.h  SocketUtils.cpp  SocketUtils.h  TcpDataPort.cpp  TcpDataPort.h  TcpPort.cpp  TcpPort.h  Thread.cpp  Thread.h  UdpDataPort.cpp  UdpDataPort.h  UdpPort.cpp  UdpPort.h  Utils.cpp  Utils.h
video_decoding/raspicam_node/src/ttalink/: checksum.h  protocol.h  ttalink_conversions.h  ttalink_helpers.h  ttalink_types.h
video_decoding/raspicam_node/src/ttalink/common/: channel.h  common.h  ttalink.h  ttalink_ahrs_info.h  ttalink_baro_sensors_data.h  ttalink_battery_data.h  ttalink_bms_data.h  ttalink_bms_err_info.h  ttalink_bms_get_charge_sn.h  ttalink_bms_get_charge_sn_ack.h  ttalink_bms_get_error_info.h  ttalink_bms_get_error_info_ack.h  ttalink_bms_info.h  ttalink_bms_info_check.h  ttalink_bms_power_control.h  ttalink_bms_power_control_ack.h  ttalink_bms_remain_time.h  ttalink_bms_set_balance_charge.h  ttalink_bms_set_balance_charge_ack.h  ttalink_calibrate_data.h  ttalink_calibrate_data_ack.h  ttalink_channel_function_config.h  ttalink_channel_function_config_ack.h  ttalink_channel_function_config_cmd.h  ttalink_com_ack.h  ttalink_com_shell_switch.h  ttalink_com_shell_switch_ack.h  ttalink_config_stream.h  ttalink_config_stream_ack.h  ttalink_device_data.h  ttalink_elec_fence_items.h  ttalink_embe_config_items.h  ttalink_embe_config_items_ack.h  ttalink_embe_rssi.h  ttalink_error_code.h  ttalink_exam_data.h  ttalink_exam_state.h  ttalink_extern_message.h  ttalink_files_ops.h  ttalink_foc_arm_state.h  (+259 more)
video_decoding/raspicam_node/src/utils/: CJsonObject.cpp  CJsonObject.hpp  CryptUtils.cpp  CryptUtils.h  FileUtils.cpp  FileUtils.h  cJSON.c  cJSON.h  diskInfo.cpp  diskInfo.h  misc.cpp  misc.h  public_utils.cpp  public_utils.h  ttalinkUtils.cpp  ttalinkUtils.h
video_decoding/raspicam_node/srv/: flight.srv  flightByVel.srv  gimbalControl.srv  takeoffOrLanding.srv
